Ajout de l'exemple d'automate fini

--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -221,6 +221,39 @@ Un automate fini est composé de :
 		\item[( )] répétition
 	\end{description}
 \end{mydef}
+\paragraph{Exemple}
+Un exemple simple de mécanisme qui peux être modélisé par un automate fini est le portillon d'accès. Dans le métro par exemple, lorsqu'un ticket est inseré, le portillon se déverrouille et le passage d'un usagé est autorisé, lorsque celui ci est passé, il se verouille à nouveau. Le portillon peut être modélisé comme un automate fini comportant deux états: verrouillés et déverrouillé. L'état peut-être modifié part l'ajout d'un ticket/jeton (entrée: jeton). Soit lorsque l'utilisateur pousse les barres du portillon (entrée: pousser). La fonction de transition est représentée par la table \ref{FTPortillon}. La figure \ref{diagrammeetat} illustre le diagramme d'état de cet automate.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\textwidth]{Images/640px-Automate_de_portillon.png}
+	\caption{Diagramme d'état du portillon {\footnotesize
+			Par ManiacParisien — Travail personnel, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=47664521}}
+	\label{diagrammeetat}
+\end{figure}
+
+
+\begin{table}[]
+	\centering
+	
+	\begin{tabular}{|l|l|l|}
+		\hline
+		& Pousser    & Jeton       \\ \hline
+		Verrouillé   & Verrouillé & Déverouillé \\ \hline
+		Déverrouillé & Verrouillé & Déverouillé \\ \hline
+	\end{tabular}
+	\caption{Fonction de transition du portillon}
+	\label{FTPortillon}
+\end{table}  
+Un exemple plus complexe est le célèbre problème du passeur. Celui ci doit traverser une rivière,avec un loup, une salade et une chèvre. Dans sa barque il ne peux prendre qu'un object avec lui. La difficulté supplémentaire est que la chèvre et le loup ne peuvent pas rester ensemble et la chèvre ne peux pas rester seule avec la salade. Chaque état représente les objects se trouvant sur l'autre rive. P étant le passeur, C la chèvre, L le loup et S la salade. Sur les flèches, la lettre correspond à l'object transporté avec lui lors de la traversée. Au début rien n'à été transporté, à la fin, les trois objects et le passeur se retrouvent sur l'autre rive.
+La figure \ref{Salade} illustre le diagramme d'état de cette énigme.
+\begin{figure}
+	\centering
+	\includegraphics[width=0.4\textwidth]{Images/567px-ChevreLoupSalade.jpg}
+	\caption{Diagramme d'état du passeur {\footnotesize Par ManiacParisien — Travail personnel, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=47815891}}
+	\label{Salade}
+\end{figure}
+
 % subsubsection mod_les_des_automates_finis (end)
 
 \subsection{Extension des automates finis}
