--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -92,7 +92,7 @@ On utilise aussi le concept d'\emph{extension} :
 $f: A \rightarrow B$ est une extension de $g: A \rightarrow B$ si $\forall x \in A : g(x)\neq \perp \Rightarrow f(x) = g(x)$.
 Autrement dit, $f$ a la même valeur que $g$ partout où $g$ est définie.
 
-La fonction $\mathrm{sqrt}(x) = \sqrt{x}$ en mathématique n'est valable que pour $x\geq0$. En revanche un programme implémentant cette fonction, par exemple $\mathrm{mysqrt}(x) = \sqrt{x}$, retourne une valeur si $x\geq0$ ou \textit{Erreur} sinon. $\mathrm{mysqrt}(x)$ est une extension de la fonction $\mathrm{sqrt}(x)$ de base.
+La fonction $\mathrm{sqrt}(x) = \sqrt{x}$ en mathématique n'est valable que pour $x\geq0$. En revanche un programme implémentant cette fonction, par exemple $\mathrm{mysqrt}(x) = \sqrt{x}$à, retourne une valeur si $x\geq0$ ou \textit{Erreur} sinon. $\mathrm{mysqrt}(x)$ est une extension de la fonction $\mathrm{sqrt}(x)$ de base.
 
 \paragraph{Définition d'une fonction}
 \label{par:d_finition_d_une_fonciton}
@@ -465,7 +465,7 @@ Peut-on encore aller plus loin?  Oui,  il suffit de considérer  l'ensemble des 
 l'ensemble des sous-ensemble de $\R$ ($2^{\R}$).  Ces ensembles ne peuvent pas être mis en bijection avec $\R$.
 Encore plus loin ?  Oui, en prenant l'ensemble des sous-ensembles de l'ensemble défini juste avant.  On obtient alors $2^{2^{\R}}$.  Et ainsi de suite à l'infini \ldots
 
-On peut ainsi schématiser la taille des ensembles comme ceci:\footnote{Pour exprimer la taille d'un ensemble non-énumérable, on peut il existe les \textbf{alephs}. Ce sont les cardinaux des ensembles infinis. On a donc la taille de $\N$ qui vaut $\aleph_0$ (dit aleph zéro), de $\R$ qui vaut $\aleph_1$, de $2^{\R}$ qui vaut $\aleph_2$,\dots }
+On peut ainsi schématiser la taille des ensembles comme ceci:\footnote{Pour exprimer la taille d'un ensemble infini, il existe les \textbf{alephs}. Ce sont les cardinaux des ensembles infinis. On a donc la taille de $\N$ qui vaut $\aleph_0$ (dit aleph zéro), de $\R$ qui vaut $\aleph_1$, de $2^{\R}$ qui vaut $\aleph_2$,\dots }
 $$\Phi < \{1,2,3\} < \N < \R < 2^{\R} < 2^{2^{\R}} < 2^{2^{2^{\R}}} \dots$$
 
 Est-ce qu'il existe encore plus grand? Oui, effectivement, l'union de tous ces ensembles 
